syntax = "proto3";

package sfc_scheme;

option csharp_namespace = "SFC.Scheme.Contracts.Messages.Get";

message GetSchemeRequest
{
    int64 id = 1;
}